<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:fitsSystemWindows="true"
    tools:context="fcih.babyapp.AccountActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingTop="140dp">

                <TextView
                    android:id="@+id/toolbar_full_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/account_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="50dp"
        app:dependTargetY="-175dp"
        app:dependType="y"
        app:dependsOn="@+id/app_bar"
        app:layout_behavior="com.zoonref.SimpleViewBehavior"
        app:targetHeight="40dp"
        app:targetWidth="40dp"
        app:targetX="43dp"
        app:targetY="-19dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/toolbar_user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:src="@drawable/deafult_user_image"
            app:riv_border_color="@color/Dark_pink"
            app:riv_border_width="3dip"
            app:riv_corner_radius="35dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            app:riv_tile_mode="clamp" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top|right"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_input_add"
            app:riv_border_color="#000"
            app:riv_border_width="1dip"
            app:riv_corner_radius="35dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            app:riv_tile_mode="clamp" />
    </FrameLayout>

    <TextView
        android:id="@+id/toolbar_user_name"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="72dp"
        android:layout_marginTop="-100dp"
        android:alpha="0"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:dependTargetY="-206dp"
        app:dependType="y"
        app:dependsOn="@+id/app_bar"
        app:layout_behavior="com.zoonref.SimpleViewBehavior"
        app:targetAlpha="1"
        app:targetX="88dp"
        app:targetY="-25dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedtop"
                android:hint="@string/email"
                android:padding="18dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/password_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_bg"
                android:hint="@string/password"
                android:padding="18dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/username_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_bg"
                android:hint="@string/User_Name"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fullname_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_bg"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="18dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/city_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_bg"
                android:hint="@string/city"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/country_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_bg"
                android:hint="@string/country"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/birthday_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_bg"
                android:hint="@string/birthday"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/gender_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbot"
                android:hint="@string/gender"
                android:inputType="text"
                android:paddingBottom="25dp"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:paddingTop="25dp"
                android:popupBackground="@color/grey_bg"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />

        </LinearLayout>


    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
